# neonet2

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  rustfmt.toml  webpack.config.js
js/: index.js
src/: buffer.rs  controller.rs  grid.rs  lib.rs  main.rs  neonet.rs  shader.wgsl  timer.rs  util.rs
src/flow/: desktop.rs  mod.rs  web.rs
static/: index.html  style.css
tests/: app.rs
