# You must change these to your own details.
[package]
name = "neonet2"
description = "Improved version of my neonet screen-saver, now for WASM!"
version = "0.1.1"
authors = ["Kneelawk <kneelawk@gmail.com>"]
license = "MIT"
categories = ["wasm"]
keywords = ["wasm", "wgpu"]
readme = "README.md"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "neonet2"
path = "src/main.rs"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]
wee_alloc = ["dep:wee_alloc"]
timer = []

[dependencies]
async-trait = "^0.1.58"
bytemuck = "^1.12.3"
futures = "^0.3.25"
futures-intrusive = "^0.5.0"
futures-util = "^0.3.25"
getrandom = { version = "^0.2.8", features = ["js"] }
rand = "^0.8.5"
thiserror = "^1.0.37"
lazy_static = "^1.4.0"
log = "^0.4.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenv = "^0.15.0"
env_logger = "^0.9.0"
wgpu = "^0.14.0"
winit = "^0.27.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "^1.21.2"
features = [
    "rt", "rt-multi-thread", "macros", "time"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
console_error_panic_hook = "0.1.7"

js-sys = "0.3.60"

raw-window-handle = "0.5.0"

# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.83"

# `wasm-bindgen-futures` allows us to have our start method be async.
wasm-bindgen-futures = "0.4.33"

wasm-logger = "^0.2.0"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.5", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Performance',
    'Window',
    'console'
]

# `wgpu` crate to allow for advanced rendering API.
[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "^0.14.0"
features = [
    "webgl"
]

# These crates are used for running unit tests.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.33"
futures = "0.3.25"
